## Change log

### 1.2.2 (in development)
* Dev - Added in the option to disable the view more button on the widget template
* Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version.

### 1.2.1
* Dev - Updating dependencies.

### 1.1.0
* Dev - Support LSX Theme 2.0 new designs
* Added compatibility with LSX 2.0
* Added compatibility with Tour Operator 1.1
* Dev - New project structure
* Fix - Fixed scripts/styles loading order
* Fix - Fixed small issues
* Fix - Replaced 'global $tour_operators' by 'global $tour_operator'
* Dev - Updated the the way the post type registers to match the refactored TO plugin
* Dev - Updated the registering of the metaboxes

### 1.0.4
* Dev - Standardized the Gallery and Video fields

### 1.0.3
* Fix - Make the addon compatible with the latest version from TO Search addon
* Fix - API key and email grabbed from the correct settings tab
* Fix - Added TO Search as subtab on LSX TO settings page
* Dev - Fixed menu navigation improved
* Fix - Code refactored to follow the latest Tour Operator plugin workflow
* Dev - Metadata: calendar info moved to the next line
* Dev - Metadata: term "price" change to "price from"
* Dev - Metadata: term “duration” added to duration meta
* Fix - Small fixes on front-end fields
* Fix - Fixed content_part filter for plugin and add-ons

### 1.0.2
* Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)

### 1.0.1
* Fix - Reduced the access to server (check API key status) using transients
* Fix - Made the API URLs dev/live dynamic using a prefix "dev-" in the API KEY

### 1.0.0
* First Version